# galfast

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  acinclude.m4  configure  configure.in  galaxy.kdevelop  galfast_config.h.in  git-untracked-files  git-version-gen  mkinstalldirs
cmake/modules/: Findlibpeyton.cmake
data/: LSSTugrizy.LSSTg.photoerr.txt  LSSTugrizy.LSSTi.photoerr.txt  LSSTugrizy.LSSTr.photoerr.txt  LSSTugrizy.LSSTu.photoerr.txt  LSSTugrizy.LSSTy.photoerr.txt  LSSTugrizy.LSSTz.photoerr.txt  LSSTugrizy[6].photosys.txt  Makefile.am  SDSSugriz.SDSSg.photoerr.txt  SDSSugriz.SDSSi.photoerr.txt  SDSSugriz.SDSSr.photoerr.txt  SDSSugriz.SDSSu.photoerr.txt  SDSSugriz.SDSSz.photoerr.txt  fbMr.txt  gi2Mr.FeH=0.txt  gi2ri.spline.txt  readme.txt  safeprimes32.txt
docs/: coordinatesystems.txt
src/: Makefile.am  bin_run.cpp  bin_volume.cpp  binning.cpp  cuda.cu  dm.cpp  explore_maps.cpp  fitscatread.cpp  fitter.cpp  footprint.cpp  galfast.cpp  gdc.h  kernels_cpu.cpp  kernels_gpu.cu  locus_demo.cpp  locusfit.cpp  merge_maps.cpp  merge_volumes.cpp  mlcolor.cpp  model_J08.h  model_densityCube.cpp  model_densityCube.h  model_expDisk.cpp  model_expDisk.h  model_powerLawEllipsoid.cpp  model_powerLawEllipsoid.h  mysql_import.cpp  observe.cpp  observe.h  observe_FeH.cpp  observe_kinTMIII.cpp  observe_vel2pm.cpp  onedimfit.cpp  os_skygen.cpp  phObjc.h  pipeline.cpp  pipeline.h  pm.cpp  raytrace_main.cpp  remap.h  (+21 more)
src/common/: Makefile.am  analysis.h  binarystream.cpp  binarystream.h  binner_tng.cpp  column.h  compmgr.h  conic_volume_map.cpp  conic_volume_map.h  container.h  cuda_cux.h  cuda_emulation.h  cuda_rng.h  cux.cpp  cux.h  cux_lowlevel.h  dm.h  dm_common.cpp  fitsloader.cpp  fitsloader.h  fitter.cpp  floodfill.h  gpc_cpp.cpp  gpc_cpp.h  gpu.h  gpu2.h  gpu_utils.cpp  gslcc.h  gslcc_exceptions.h  gslcc_min.h  integerbin.h  interval_arithmetic.h  io.cpp  io.h  model.cpp  model.h  otable.cpp  otable.h  packed_id.cpp  paralax.cpp  (+14 more)
src/gpc/: Makefile.am  gpc.h
src/modules/: Bond2010_gpu.cu.h  Bond2010_host.cpp  FeH_gpu.cu.h  FeH_host.cpp  GaussianFeH_gpu.cu.h  GaussianFeH_host.cpp  Makefile.am  fixedFeH_gpu.cu.h  fixedFeH_host.cpp  gal2other_gpu.cu.h  gal2other_host.cpp  kinTMIII_gpu.cu.h  kinTMIII_host.cpp  module_lib.h  photometricErrors_gpu.cu.h  photometricErrors_host.cpp  photometry.h  photometry_gpu.cu.h  photometry_host.cpp  unresolvedMultiples_gpu.cu.h  unresolvedMultiples_host.cpp  vel2pm_gpu.cu.h  vel2pm_host.cpp
src/skygen/: Makefile.am  model_J08.cpp  model_J08.h  model_LCBulge.cpp  model_LCBulge.h  model_brokenPowerLaw.cpp  model_brokenPowerLaw.h  model_densityCube.cpp  model_densityCube.h  model_expDisk.cpp  model_expDisk.h  model_lib.h  model_powerLawEllipsoid.cpp  model_powerLawEllipsoid.h  os_skygen.cpp  skyconfig_impl.h  skygen.cu.h  skygen.h
templates/: cpp
tests/demo/: Bond2010.conf  cmd.conf  countsMap.conf  definitions.conf  extinction.conf  feh.conf  fitsout.conf  foot.conf  gal2other.conf  model.halo.conf  model.thickdisk.conf  model.thindisk.conf  photometry.conf  skygen.conf
tests/ngp/: Bond2010.conf  MrLF.lf.txt  cmd.conf  definitions.conf  extinction.conf  feh.Ivezic08.conf  foot.ngp.conf  gal2other.conf  model.halo.conf  model.thickdisk.conf  model.thindisk.conf  photometry.MS.conf  skygen.conf  smmacros.sm  test.sm
tests/os_photometry/: Ar_north.fits  catalog.conf  fitsout.conf  foot.048152.conf  foot.beam.conf  foot.rect.conf  go.sh  job.conf  lumfun.abs.lf.txt  model.BahcallSoneira.conf  model.ToyGeocentricPowerLaw.conf  model.powerLawEllipsoid.conf  pdf.conf  postprocess.conf  skygen.conf  status.conf
tests/os_vel2pm/: beam.conf  catalog.conf  foot.rect.conf  go.sh  model.BahcallSoneira.conf  pdf.conf  postprocess.conf
tests/os_vel2pm/result/: sky.cat.txt  sky.obs.txt
workspace/: driver  driver_bin_cyl  driver_bin_xy  driver_ng  driver_sel_cyl  driver_sel_xy  genbatch.pl  genbinbatch.pl  gencylavgbatch.pl  genmapbatch.pl  genselectorbatch.pl  linkdup.csh  lumfun.txt  median3d.pl  pbs2local.pl
workspace/paper/: bins.txt  conf.sdss  fits.txt  run_geometry.txt  sample.sel
