AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(galaxy, 0.6)

AC_LANG_CPLUSPLUS
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_CHECK_LIB(m,main)
AC_CHECK_LIB(z,main)
AC_CHECK_LIB(dl,main)

AC_CHECK_LIB(pthread,main)

#AC_CHECK_LIB(gslcblas,main)
LIBS="$LIBS -lgslcblas"
AC_caolan_CHECK_PACKAGE(gsl, main, gsl, gsl/gsl_fit.h,
   AC_MSG_RESULT([GNU Scientific Library found.]),
   AC_MSG_ERROR([GNU Scientific Library NOT found. Cannot continue - please compile and install GSL first.]) )

AC_caolan_CHECK_PACKAGE(libpeyton, main, peyton, astro/constants.h,
   AC_MSG_RESULT([libpeyton found.]),
   AC_MSG_ERROR([libpeyton NOT found]) )

AC_caolan_CHECK_PACKAGE(cfitsio, ffpss, cfitsio, fitsio.h,
   AC_MSG_RESULT([cfitsio found.]),
   AC_MSG_RESULT([cfitsio 2.4 or later NOT found]) )

AC_CHECK_LIB(X11,main)
AC_CHECK_LIB(utils,main)
AC_CHECK_LIB(devices,main)
AC_CHECK_LIB(plotsub,main)
AC_CHECK_LIB(parser,main)
AC_CHECK_LIB(bz2,main)
AC_caolan_CHECK_PACKAGE(sm, sm_parser, parser, sm_declare.h,
   [
#     SM_LIBS="-lplotsub -ldevices -lutils"
     AC_MSG_RESULT([SM callable interface found.])
   ],[
#     SM_LIBS=
     AC_MSG_RESULT([SM callable interface NOT found])
   ]
)

RS_BOOST([1.33.0],
	[
	  CXXFLAGS="$CXXFLAGS $BOOST_CPPFLAGS"
	  AC_DEFINE(HAVE_BOOST, 1, Define if you have the package)
	],[
	  AC_MSG_RESULT([Boost C++ libraries NOT found. Omitting Boost dependent code.])
	])

RS_BOOST_IOSTREAMS(
	[
	  AC_MSG_RESULT([    - Boost.Iostreams found.])
          AC_DEFINE(HAVE_BOOST_IOSTREAMS, 1, Define if you have the package)
	],[
	  AC_MSG_RESULT([    - Boost.Iostreams NOT found. Omitting Boost.Iostreams dependent code.])
	])

RS_BOOST_REGEX(
	[
	  AC_MSG_RESULT([    - Boost.Regex found.])
          AC_DEFINE(HAVE_BOOST_REGEX, 1, Define if you have the package)
	],[
	  AC_MSG_RESULT([    - Boost.Regex NOT found. Omitting Boost.Regex dependent code.])
	])


########################
# Check for CUDA
# Taken from git://diracvideo.schleef.org/git/schroedinger.git
########################
AC_ARG_WITH([cuda],
    AS_HELP_STRING([--with-cuda=PATH],[prefix where cuda is installed [[default=no]]]),
    [],
    [with_cuda=no])
if test "x$with_cuda" = xyes; then
  AC_PATH_PROG([NVCC], [nvcc], no, [$PATH:/usr/local/cuda/bin])
  if test "x$NVCC" = xno ; then
    AC_MSG_FAILURE(["--with-cuda was give, but nvcc was not found"])
  fi
  with_cuda=`echo $NVCC|sed 's,bin/nvcc,,'`
fi

## Check for device emulation
AC_ARG_ENABLE(cuda-devemu,
 [  --enable-cuda-devemu  Enable CUDA device emulation. Should be 
  used for debugging only.],
 [ cuda_devemu=yes
 ])

if test "x$with_cuda" != xno; then
  AC_MSG_RESULT([CUDA found, compiling GPU support])
  CUDA_CFLAGS="-I$with_cuda/include"
  ARCH=`arch`
  if test "x$ARCH" == xx86_64; then
    CUDA_LIBS="-L$with_cuda/lib64 -lcudart -lcuda"
  else
    CUDA_LIBS="-L$with_cuda/lib -lcudart -lcuda"
  fi
  NVCC="$with_cuda/bin/nvcc"
  if test "x$cuda_devemu" == xyes; then
    NVCCFLAGS="-O0 -g --host-compilation 'C++' --device-emulation -arch sm_13 -Xcompiler -O0,-g"
    AC_MSG_RESULT([    - WARNING: Targeting GPU code for device emulation])
    CUDA_DEVEMU=yes
    AC_DEFINE(CUDA_DEVEMU, 1, [Targeting CUDA device emulation])
  else
    NVCCFLAGS="-O2 -g --host-compilation 'C++' -arch sm_13"
    AC_MSG_RESULT([    - Targeting GPU code for sm_13])
  fi
  HAVE_CUDA=yes
  AC_DEFINE(HAVE_CUDA, 1, [NVIDIA CUDA (GPU) support])
  CPPFLAGS="$CPPFLAGS -I$with_cuda/include"
else
  CUDA_CFLAGS=
  CUDA_LIBS=
  NVCC=
  NVCCFLAGS=
  HAVE_CUDA=no
  AC_MSG_RESULT([Not compiling GPU support])
fi
AC_SUBST(CUDA_CFLAGS)
AC_SUBST(CUDA_LIBS)
AC_SUBST(NVCC)
AC_SUBST(NVCCFLAGS)
AM_CONDITIONAL(HAVE_CUDA, test "x$HAVE_CUDA" = "xyes")
AM_CONDITIONAL(CUDA_DEVEMU, test "x$CUDA_DEVEMU" = "xyes")

#####################

LIBS="$LIBS $BOOST_LIBS $CUDA_LIBS $SM_LIBS"
CPPFLAGS="-DDATADIR=\"\\\"\$(pkgdatadir)\\\"\" $CPPFLAGS"

AC_OUTPUT(Makefile data/Makefile src/Makefile src/common/Makefile src/gpc/Makefile \
	src/modules/Makefile src/skygen/Makefile)
