METASOURCES = AUTO
datafilesdir = $(pkgdatadir)
datafiles_DATA = LSSTugrizy.photosys.txt SDSSugriz.SDSSg.photoerr.txt \
	SDSSugriz.SDSSi.photoerr.txt SDSSugriz.SDSSr.photoerr.txt SDSSugriz.SDSSu.photoerr.txt \
	SDSSugriz.SDSSz.photoerr.txt SDSSugriz.photosys.txt gi2Mr.FeH=0.txt gi2ri.spline.txt readme.txt \
	LSSTugriz.LSSTi.photoerr.txt LSSTugriz.LSSTr.photoerr.txt LSSTugriz.LSSTu.photoerr.txt \
	LSSTugriz.LSSTz.photoerr.txt LSSTugriz.LSSTy.photoerr.txt LSSTugriz.LSSTg.photoerr.txt \
	safeprimes32.txt
