INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libcommon.a
libcommon_a_SOURCES = Makefile.am analysis.h binarystream.cpp binarystream.h \
	gpc_cpp.cpp gpu_utils.cpp gslcc.h gslcc_exceptions.h gslcc_min.h io.cpp model.cpp \
	paralax.cpp paralax.h textloader.h textstream.h
noinst_HEADERS = column.h container.h gpc_cpp.h gpu.h io.h model.h \
	projections.h gpu2.h
