INCLUDES = $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES =  libcommon.a
libcommon_a_SOURCES = Makefile.am analysis.h binarystream.cpp binarystream.h \
	fitter.cpp gpc_cpp.cpp gpu_utils.cpp gslcc.h gslcc_exceptions.h gslcc_min.h io.cpp \
	otable.cpp spline.cpp textloader.h textstream.h
noinst_HEADERS = column.h container.h cuda_cux.h cuda_emulation.h cuda_rng.h \
	gpc_cpp.h gpu.h io.h otable.h projections.h spline.h
